# src/apiSchema/coachSchema.ts
@@ -1,0 +1,28 @@
+import Joi from 'joi';
+import * as constants from '../constants';
+import { join } from 'path';
+
+export const login = Joi.object({
+    username: Joi.string()
+        .regex(/^(?:^[0-9]{4,15}|[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4})$/i)
+        .required()
+        .messages(
+            {
+                "string.pattern.base": constants.MESSAGES.invalid_email
+            }
+        ),
+    password: Joi.string().min(8)
+        .max(15)
+        .regex(new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#\$%\^&\*])(?=.{8,})"))
+        .required()
+        .messages({
+            "string.min": constants.CUSTOM_JOI_MESSAGE.password_msg.min,
+            "string.max": constants.CUSTOM_JOI_MESSAGE.password_msg.max,
+            "string.base": constants.CUSTOM_JOI_MESSAGE.password_msg.base,
+            "string.empty": constants.CUSTOM_JOI_MESSAGE.password_msg.required,
+            "any.required": constants.CUSTOM_JOI_MESSAGE.password_msg.required,
+            "string.pattern.base": constants.CUSTOM_JOI_MESSAGE.password_msg.pattern
+        }),
+    device_token: Joi.string().optional()
+});
+
